# surrealdb-crud-with-axum

./: Cargo.toml
examples/: create_api.rs  create_api_req_new_user.rs  create_api_two.rs
src/: lib.rs  main.rs
src/modules/: create_entry.rs  db_instance.rs  delete_entry.rs  form.rs  hello_world.rs  mod.rs  my_middleware.rs  read_entry.rs  tracing_middleware.rs  update_entry.rs
