[package]
name = "surrealdb_with_axum_crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
surrealdb = "1.2.0"
axum = { version = "0.7.4" }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] } 
chrono = "0.4"
once_cell = "1.19.0"
# dotenv_codegen = "0.15.0"
dotenv = "0.15.0"